--- a/About.html
+++ b/About.html
@@ -1,24 +1,33 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/about.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>About</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
   </form>
  </div>
 </div>
-<img src="자료/About/MyProfile.png" alt="ME">
+ <img class="about" src="../자료/About/MyProfile.png" alt="ME">
+<p class="about">Welcome to KoreanWave page!<br>
+I am this page developer JA.<br>
+I hope the KoreanWave will help you get all the information you want.<br>
+If you want to contact me you can use Contact section.<br>
+Feel free to use!<br>
+Have a nice day!
+</p>
 </body>
 </html>
