--- a/Kdrama2018.html
+++ b/Kdrama2018.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kdrama.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>Kdrama2018</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -23,286 +25,286 @@
 <table>
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/FamiliarWife.jpg" alt="FamiliarWife">
+   <img class="kdrama" src="../자료/K-Drama2018/FamiliarWife.jpg" alt="FamiliarWife">
    <figcaption>Familiar Wife</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/WhatIsWrongWithSecretaryKim.jpg" alt="WhatIsWrongWithSecretaryKim">
+   <img class="kdrama" src="../자료/K-Drama2018/WhatIsWrongWithSecretaryKim.jpg" alt="WhatIsWrongWithSecretaryKim">
    <figcaption>What Is Wrong With Secretary Kim</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/AreYouHuman.jpg" alt="AreYouHuman">
+   <img class="kdrama" src="../자료/K-Drama2018/AreYouHuman.jpg" alt="AreYouHuman">
    <figcaption>Are You Human</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MrSunshine.jpg" alt="MrSunshine">
+   <img class="kdrama" src="../자료/K-Drama2018/MrSunshine.jpg" alt="MrSunshine">
    <figcaption>Mr Sunshine</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MyIDIsGangnamBeauty.jpg" alt="MyIDIsGangnamBeauty">
+   <img class="kdrama" src="../자료/K-Drama2018/MyIDIsGangnamBeauty.jpg" alt="MyIDIsGangnamBeauty">
    <figcaption>My ID Is Gangnam Beauty</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/LawlessLawyer.jpg" alt="LawlessLawyer">
+   <img class="kdrama" src="../자료/K-Drama2018/LawlessLawyer.jpg" alt="LawlessLawyer">
    <figcaption>Lawless Lawyer</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MyMister.jpg" alt="MyMister">
+   <img class="kdrama" src="../자료/K-Drama2018/MyMister.jpg" alt="MyMister">
    <figcaption>My Mister</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/SomethingInTheRain.png" alt="SomethingInTheRain">
+   <img class="kdrama" src="../자료/K-Drama2018/SomethingInTheRain.png" alt="SomethingInTheRain">
    <figcaption>Something In The Rain</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/AKoreanOdyssey.jpg" alt="AKoreanOdyssey">
+   <img class="kdrama" src="../자료/K-Drama2018/AKoreanOdyssey.jpg" alt="AKoreanOdyssey">
    <figcaption>A Korean Odyssey</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/WelcomeToWaikiki.jpg" alt="WelcomeToWaikiki">
+   <img class="kdrama" src="../자료/K-Drama2018/WelcomeToWaikiki.jpg" alt="WelcomeToWaikiki">
    <figcaption>Welcome To Waikiki</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/100DaysMyPrince.jpg" alt="100DaysMyPrince">
+   <img class="kdrama" src="../자료/K-Drama2018/100DaysMyPrince.jpg" alt="100DaysMyPrince">
    <figcaption>100 Days My Prince</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Still17.jpg" alt="Still17">
+   <img class="kdrama" src="../자료/K-Drama2018/Still17.jpg" alt="Still17">
    <figcaption>Still 17</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/ComeAndHugMe.jpg" alt="ComeAndHugMe">
+   <img class="kdrama" src="../자료/K-Drama2018/ComeAndHugMe.jpg" alt="ComeAndHugMe">
    <figcaption>Come And Hug Me</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/IAmNotARobot.jpg" alt="IAmNotARobot">
+   <img class="kdrama" src="../자료/K-Drama2018/IAmNotARobot.jpg" alt="IAmNotARobot">
    <figcaption>I Am Not A Robot</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheSmileHasLeftYourEyes.jpg" alt="TheSmileHasLeftYourEyes">
+   <img class="kdrama" src="../자료/K-Drama2018/TheSmileHasLeftYourEyes.jpg" alt="TheSmileHasLeftYourEyes">
    <figcaption>The Smile Has Left Your Eyes</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MsHammurabi.jpg" alt="MsHammurabi">
+   <img class="kdrama" src="../자료/K-Drama2018/MsHammurabi.jpg" alt="MsHammurabi">
    <figcaption>Ms Hammurabi</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Live.jpg" alt="Live">
+   <img class="kdrama" src="../자료/K-Drama2018/Live.jpg" alt="Live">
    <figcaption>Live</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/SwitchChangeTheWorld.jpg" alt="SwitchChangeTheWorld">
+   <img class="kdrama" src="../자료/K-Drama2018/SwitchChangeTheWorld.jpg" alt="SwitchChangeTheWorld">
    <figcaption>Switch Change The World</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheBeautyInside.jpg" alt="TheBeautyInside">
+   <img class="kdrama" src="../자료/K-Drama2018/TheBeautyInside.jpg" alt="TheBeautyInside">
    <figcaption>The Beauty Inside</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Life.jpg" alt="Life">
+   <img class="kdrama" src="../자료/K-Drama2018/Life.jpg" alt="Life">
    <figcaption>Life</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheMiracleWeMet.jpg" alt="TheMiracleWeMet">
+   <img class="kdrama" src="../자료/K-Drama2018/TheMiracleWeMet.jpg" alt="TheMiracleWeMet">
    <figcaption>The Miracle We Met</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Tempted.jpg" alt="Tempted">
+   <img class="kdrama" src="../자료/K-Drama2018/Tempted.jpg" alt="Tempted">
    <figcaption>Tempted</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/WorkOfLove.jpg" alt="WorkOfLove">
+   <img class="kdrama" src="../자료/K-Drama2018/WorkOfLove.jpg" alt="WorkOfLove">
    <figcaption>Work Of Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/AboutTime.jpg" alt="AboutTime">
+   <img class="kdrama" src="../자료/K-Drama2018/AboutTime.jpg" alt="AboutTime">
    <figcaption>About Time</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Misty.jpg" alt="Misty">
+   <img class="kdrama" src="../자료/K-Drama2018/Misty.jpg" alt="Misty">
    <figcaption>Misty</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheHymnOfDeath.jpg" alt="TheHymnOfDeath">
+   <img class="kdrama" src="../자료/K-Drama2018/TheHymnOfDeath.jpg" alt="TheHymnOfDeath">
    <figcaption>The Hymn Of Death</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/LovelyHorribly.jpg" alt="LovelyHorribly">
+   <img class="kdrama" src="../자료/K-Drama2018/LovelyHorribly.jpg" alt="LovelyHorribly">
    <figcaption>Lovely Horribly</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/Suits.jpg" alt="Suits">
+   <img class="kdrama" src="../자료/K-Drama2018/Suits.jpg" alt="Suits">
    <figcaption>Suits</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/FeelGoodToDie.jpg" alt="FeelGoodToDie">
+   <img class="kdrama" src="../자료/K-Drama2018/FeelGoodToDie.jpg" alt="FeelGoodToDie">
    <figcaption>Feel Good To Die</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/WhereStarsLand.jpg" alt="WhereStarsLand">
+   <img class="kdrama" src="../자료/K-Drama2018/WhereStarsLand.jpg" alt="WhereStarsLand">
    <figcaption>Where Stars Land</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/YourHouseHelper.jpg" alt="YourHouseHelper">
+   <img class="kdrama" src="../자료/K-Drama2018/YourHouseHelper.jpg" alt="YourHouseHelper">
    <figcaption>Your House Helper</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/RadioRomance.jpg" alt="RadioRomance">
+   <img class="kdrama" src="../자료/K-Drama2018/RadioRomance.jpg" alt="RadioRomance">
    <figcaption>Radio Romance</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheGhostDetective.jpg" alt="TheGhostDetective">
+   <img class="kdrama" src="../자료/K-Drama2018/TheGhostDetective.jpg" alt="TheGhostDetective">
    <figcaption>The Ghost Detective</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/WitchLove.jpg" alt="WitchLove">
+   <img class="kdrama" src="../자료/K-Drama2018/WitchLove.jpg" alt="WitchLove">
    <figcaption>Witch Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TaleOfFairy.png" alt="TaleOfFairy">
+   <img class="kdrama" src="../자료/K-Drama2018/TaleOfFairy.png" alt="TaleOfFairy">
    <figcaption>Tale Of Fairy</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MatrimonialChaos.jpg" alt="MatrimonialChaos">
+   <img class="kdrama" src="../자료/K-Drama2018/MatrimonialChaos.jpg" alt="MatrimonialChaos">
    <figcaption>Matrimonial Chaos</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/PrisonPlaybook.jpg" alt="PrisonPlaybook">
+   <img class="kdrama" src="../자료/K-Drama2018/PrisonPlaybook.jpg" alt="PrisonPlaybook">
    <figcaption>Prison Playbook</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MyFirstLove.jpg" alt="MyFirstLove">
+   <img class="kdrama" src="../자료/K-Drama2018/MyFirstLove.jpg" alt="MyFirstLove">
    <figcaption>My First Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/HusbandOhJakDu.jpg" alt="HusbandOhJakDu">
+   <img class="kdrama" src="../자료/K-Drama2018/HusbandOhJakDu.jpg" alt="HusbandOhJakDu">
    <figcaption>Husband Oh Jak Du</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/LifeOnMars.jpg" alt="LifeOnMars">
+   <img class="kdrama" src="../자료/K-Drama2018/LifeOnMars.jpg" alt="LifeOnMars">
    <figcaption>Life On Mars</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/RainOrShine.jpg" alt="RainOrShine">
+   <img class="kdrama" src="../자료/K-Drama2018/RainOrShine.jpg" alt="RainOrShine">
    <figcaption>Rain Or Shine</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/APoemADay.jpg" alt="APoemADay">
+   <img class="kdrama" src="../자료/K-Drama2018/APoemADay.jpg" alt="APoemADay">
    <figcaption>A Poem A Day</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheThirdCharm.jpg" alt="TheThirdCharm">
+   <img class="kdrama" src="../자료/K-Drama2018/TheThirdCharm.jpg" alt="TheThirdCharm">
    <figcaption>The Third Charm</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/BlackKnightTheManWhoGuardsMe.jpg" alt="BlackKnightTheManWhoGuardsMe">
+   <img class="kdrama" src="../자료/K-Drama2018/BlackKnightTheManWhoGuardsMe.jpg" alt="BlackKnightTheManWhoGuardsMe">
    <figcaption>Black Knight The Man Who Guards Me</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/MySecretTerrius.jpg" alt="MySecretTerrius">
+   <img class="kdrama" src="../자료/K-Drama2018/MySecretTerrius.jpg" alt="MySecretTerrius">
    <figcaption>MySecretTerrius</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2018/TheUndateables.jpg" alt="TheUndateables">
+   <img class="kdrama" src="../자료/K-Drama2018/TheUndateables.jpg" alt="TheUndateables">
    <figcaption>TheUndateables</figcaption>
   </a>
  </figure></th>
