--- a/Kdrama2020.html
+++ b/Kdrama2020.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kdrama.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>Kdrama2020</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -23,310 +25,310 @@
 <table>
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/HospitalPlaylist.jpeg" alt="HospitalPlaylist">
+   <img class="kdrama" src="../자료/K-Drama2020/HospitalPlaylist.jpeg" alt="HospitalPlaylist">
    <figcaption>Hospital Playlist</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/APieceOfYourMind.jpg" alt="APieceOfYourMind">
+   <img class="kdrama" src="../자료/K-Drama2020/APieceOfYourMind.jpg" alt="APieceOfYourMind">
    <figcaption>A Piece Of Your Mind</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/BeautifulLoveWonderfulLife.jpg" alt="BeautifulLoveWonderfulLife">
+   <img class="kdrama" src="../자료/K-Drama2020/BeautifulLoveWonderfulLife.jpg" alt="BeautifulLoveWonderfulLife">
    <figcaption>Beautiful Love Wonderful Life</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/BlackDogBeingATeacher.jpg" alt="BlackDogBeingATeacher">
+   <img class="kdrama" src="../자료/K-Drama2020/BlackDogBeingATeacher.jpg" alt="BlackDogBeingATeacher">
    <figcaption>Black Dog Being A Teacher</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/BornAgain.jpg" alt="BornAgain">
+   <img class="kdrama" src="../자료/K-Drama2020/BornAgain.jpg" alt="BornAgain">
    <figcaption>Born Again</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Chocolate.jpg" alt="Chocolate">
+   <img class="kdrama" src="../자료/K-Drama2020/Chocolate.jpg" alt="Chocolate">
    <figcaption>Chocolate</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/DoDoSolSolLaLaSol.jpg" alt="DoDoSolSolLaLaSol">
+   <img class="kdrama" src="../자료/K-Drama2020/DoDoSolSolLaLaSol.jpg" alt="DoDoSolSolLaLaSol">
    <figcaption>Do Do Sol Sol La La Sol</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/DrRomantic2.jpg" alt="DrRomantic2">
+   <img class="kdrama" src="../자료/K-Drama2020/DrRomantic2.jpg" alt="DrRomantic2">
    <figcaption>Dr.Romantic 2</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/EccentricChefMoon.jpg" alt="EccentricChefMoon">
+   <img class="kdrama" src="../자료/K-Drama2020/EccentricChefMoon.jpg" alt="EccentricChefMoon">
    <figcaption>Eccentric Chef Moon</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/ExtraCurricular.jpg" alt="ExtraCurricular">
+   <img class="kdrama" src="../자료/K-Drama2020/ExtraCurricular.jpg" alt="ExtraCurricular">
    <figcaption>Extra Curricular</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/FindMeInYourMemory.jpg" alt="FindMeInYourMemory">
+   <img class="kdrama" src="../자료/K-Drama2020/FindMeInYourMemory.jpg" alt="FindMeInYourMemory">
    <figcaption>Find Me In YourMemory</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/FlowerOfEvil.jpg" alt="FlowerOfEvil">
+   <img class="kdrama" src="../자료/K-Drama2020/FlowerOfEvil.jpg" alt="FlowerOfEvil">
    <figcaption>Flower Of Evil</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Forest.jpg" alt="Forest">
+   <img class="kdrama" src="../자료/K-Drama2020/Forest.jpg" alt="Forest">
    <figcaption>Forest</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/GoodCasting.jpg" alt="GoodCasting">
+   <img class="kdrama" src="../자료/K-Drama2020/GoodCasting.jpg" alt="GoodCasting">
    <figcaption>Good Casting</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/HiByeMama.jpg" alt="HiByeMama">
+   <img class="kdrama" src="../자료/K-Drama2020/HiByeMama.jpg" alt="HiByeMama">
    <figcaption>Hi Bye Mama</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/HowToBuyAFriend.jpg" alt="HowToBuyAFriend">
+   <img class="kdrama" src="../자료/K-Drama2020/HowToBuyAFriend.jpg" alt="HowToBuyAFriend">
    <figcaption>How To Buy A Friend</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Hyena.jpg" alt="Hyena">
+   <img class="kdrama" src="../자료/K-Drama2020/Hyena.jpg" alt="Hyena">
    <figcaption>Hyena</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/ItIsOkayNotToBeOkay.jpg" alt="ItIsOkayNotToBeOkay">
+   <img class="kdrama" src="../자료/K-Drama2020/ItIsOkayNotToBeOkay.jpg" alt="ItIsOkayNotToBeOkay">
    <figcaption>It Is Okay Not To Be Okay</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Kingdom.jpg" alt="Kingdom">
+   <img class="kdrama" src="../자료/K-Drama2020/Kingdom.jpg" alt="Kingdom">
    <figcaption>Kingdom</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/KingMakerTheChangeOfDestiny.jpg" alt="KingMakerTheChangeOfDestiny">
+   <img class="kdrama" src="../자료/K-Drama2020/KingMakerTheChangeOfDestiny.jpg" alt="KingMakerTheChangeOfDestiny">
    <figcaption>King Maker The Change Of Destiny</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/KkondaeIntern.jpg" alt="KkondaeIntern">
+   <img class="kdrama" src="../자료/K-Drama2020/KkondaeIntern.jpg" alt="KkondaeIntern">
    <figcaption>Kkondae Intern</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/NobodyKnows.jpg" alt="NobodyKnows">
+   <img class="kdrama" src="../자료/K-Drama2020/NobodyKnows.jpg" alt="NobodyKnows">
    <figcaption>NobodyKnows</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Memorist.jpg" alt="Memorist">
+   <img class="kdrama" src="../자료/K-Drama2020/Memorist.jpg" alt="Memorist">
    <figcaption>Memorist</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/MenAreMen.jpg" alt="MenAreMen">
+   <img class="kdrama" src="../자료/K-Drama2020/MenAreMen.jpg" alt="MenAreMen">
    <figcaption>Men Are Men</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/MyHoloLove.jpg" alt="MyHoloLove">
+   <img class="kdrama" src="../자료/K-Drama2020/MyHoloLove.jpg" alt="MyHoloLove">
    <figcaption>My Holo Love</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/MysticPopUpBar.jpg" alt="MysticPopUpBar">
+   <img class="kdrama" src="../자료/K-Drama2020/MysticPopUpBar.jpg" alt="MysticPopUpBar">
    <figcaption>Mystic Pop Up Bar</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/MyUnfamiliarFamily.jpg" alt="MyUnfamiliarFamily">
+   <img class="kdrama" src="../자료/K-Drama2020/MyUnfamiliarFamily.jpg" alt="MyUnfamiliarFamily">
    <figcaption>My Unfamiliar Family</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/OhMyBaby.jpg" alt="OhMyBaby">
+   <img class="kdrama" src="../자료/K-Drama2020/OhMyBaby.jpg" alt="OhMyBaby">
    <figcaption>Oh My Baby</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/OnceAgain.jpg" alt="OnceAgain">
+   <img class="kdrama" src="../자료/K-Drama2020/OnceAgain.jpg" alt="OnceAgain">
    <figcaption>Once Again</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/PrivateLives.jpg" alt="PrivateLives">
+   <img class="kdrama" src="../자료/K-Drama2020/PrivateLives.jpg" alt="PrivateLives">
    <figcaption>Private Lives</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/PsychopathDiary.jpg" alt="PsychopathDiary">
+   <img class="kdrama" src="../자료/K-Drama2020/PsychopathDiary.jpg" alt="PsychopathDiary">
    <figcaption>Psychopath Diary</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/RecordOfYouth.jpg" alt="RecordOfYouth">
+   <img class="kdrama" src="../자료/K-Drama2020/RecordOfYouth.jpg" alt="RecordOfYouth">
    <figcaption>Record Of Youth</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Rugal.jpg" alt="Rugal">
+   <img class="kdrama" src="../자료/K-Drama2020/Rugal.jpg" alt="Rugal">
    <figcaption>Rugal</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Startup.jpg" alt="Startup">
+   <img class="kdrama" src="../자료/K-Drama2020/Startup.jpg" alt="Startup">
    <figcaption>Startup</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/StoveLeague.jpg" alt="StoveLeague">
+   <img class="kdrama" src="../자료/K-Drama2020/StoveLeague.jpg" alt="StoveLeague">
    <figcaption>Stove League</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/SweetMunchies.jpg" alt="SweetMunchies">
+   <img class="kdrama" src="../자료/K-Drama2020/SweetMunchies.jpg" alt="SweetMunchies">
    <figcaption>Sweet Munchies</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TeamBulldogOffDutyInvestigation.jpg" alt="TeamBulldogOffDutyInvestigation">
+   <img class="kdrama" src="../자료/K-Drama2020/TeamBulldogOffDutyInvestigation.jpg" alt="TeamBulldogOffDutyInvestigation">
    <figcaption>Team Bulldog Off Duty Investigation</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TellMeWhatYouSaw.jpg" alt="TellMeWhatYouSaw">
+   <img class="kdrama" src="../자료/K-Drama2020/TellMeWhatYouSaw.jpg" alt="TellMeWhatYouSaw">
    <figcaption>Tell Me What You Saw</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TheGameTowardsZero.jpg" alt="TheGameTowardsZero">
+   <img class="kdrama" src="../자료/K-Drama2020/TheGameTowardsZero.jpg" alt="TheGameTowardsZero">
    <figcaption>The Game Towards Zero</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TheKing.jpg" alt="TheKing">
+   <img class="kdrama" src="../자료/K-Drama2020/TheKing.jpg" alt="TheKing">
    <figcaption>TheKing</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TheSchoolNurseFiles.jpg" alt="TheSchoolNurseFiles">
+   <img class="kdrama" src="../자료/K-Drama2020/TheSchoolNurseFiles.jpg" alt="TheSchoolNurseFiles">
    <figcaption>The School Nurse Files</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/TheWorldOfTheMarried.jpg" alt="TheWorldOfTheMarried">
+   <img class="kdrama" src="../자료/K-Drama2020/TheWorldOfTheMarried.jpg" alt="TheWorldOfTheMarried">
    <figcaption>The World Of The Married</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/Train.jpg" alt="Train">
+   <img class="kdrama" src="../자료/K-Drama2020/Train.jpg" alt="Train">
    <figcaption>Train</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/WasItLove.jpg" alt="WasItLove">
+   <img class="kdrama" src="../자료/K-Drama2020/WasItLove.jpg" alt="WasItLove">
    <figcaption>Was It Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/WhenIWasMostBeautiful.jpg" alt="WhenIWasMostBeautiful">
+   <img class="kdrama" src="../자료/K-Drama2020/WhenIWasMostBeautiful.jpg" alt="WhenIWasMostBeautiful">
    <figcaption>WhenIWasMostBeautiful</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/WhenTheWeatherIsFine.jpg" alt="WhenTheWeatherIsFine">
+   <img class="kdrama" src="../자료/K-Drama2020/WhenTheWeatherIsFine.jpg" alt="WhenTheWeatherIsFine">
    <figcaption>When The Weather Is Fine</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/WhenYouLoveBlooms.jpg" alt="WhenYouLoveBlooms">
+   <img class="kdrama" src="../자료/K-Drama2020/WhenYouLoveBlooms.jpg" alt="WhenYouLoveBlooms">
    <figcaption>When You Love Blooms</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/WhereYourEyesLinger.jpg" alt="Where Your Eyes Linger">
+   <img class="kdrama" src="../자료/K-Drama2020/WhereYourEyesLinger.jpg" alt="Where Your Eyes Linger">
    <figcaption>Where Your Eyes Linger</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/CrashLandingOnYou.png" alt="CrashLandingOnYou">
+   <img class="kdrama" src="../자료/K-Drama2020/CrashLandingOnYou.png" alt="CrashLandingOnYou">
    <figcaption>Crash Landing On You</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2020/ItaewonClass.png" alt="ItaewonClass">
+   <img class="kdrama" src="../자료/K-Drama2020/ItaewonClass.png" alt="ItaewonClass">
    <figcaption>Itaewon Class</figcaption>
   </a>
  </figure></th></tr>
