--- a/KpopGroups.html
+++ b/KpopGroups.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kpop.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>KpopGroups</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -23,330 +25,330 @@
 <table>
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/BTS.jpg" alt="BTS">
+   <img class="kpop" src="../자료/K-PopGroups/BTS.jpg" alt="BTS">
    <figcaption>BTS</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/EXO.png" alt="EXO">
+   <img class="kpop" src="../자료/K-PopGroups/EXO.png" alt="EXO">
    <figcaption>EXO</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/GirlsGeneration.jpg" alt="GirlsGeneration">
+   <img class="kpop" src="../자료/K-PopGroups/GirlsGeneration.jpg" alt="GirlsGeneration">
    <figcaption>Girls' Generation</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/GOT7.png" alt="GOT7">
+   <img class="kpop" src="../자료/K-PopGroups/GOT7.png" alt="GOT7">
    <figcaption>GOT7</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/BigBang.jpg" alt="BigBang">
+   <img class="kpop" src="../자료/K-PopGroups/BigBang.jpg" alt="BigBang">
    <figcaption>Big Bang</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Blackpink.jpg" alt="Blackpink">
+   <img class="kpop" src="../자료/K-PopGroups/Blackpink.jpg" alt="Blackpink">
    <figcaption>Blackpink</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/BTOB.jpg" alt="BTOB">
+   <img class="kpop" src="../자료/K-PopGroups/BTOB.jpg" alt="BTOB">
    <figcaption>BTOB</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Apink.jpg" alt="Apink">
+   <img class="kpop" src="../자료/K-PopGroups/Apink.jpg" alt="Apink">
    <figcaption>Apink</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Infinite.jpg" alt="Infinite">
+   <img class="kpop" src="../자료/K-PopGroups/Infinite.jpg" alt="Infinite">
    <figcaption>Infinite</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Day6.jpg" alt="Day6">
+   <img class="kpop" src="../자료/K-PopGroups/Day6.jpg" alt="Day6">
    <figcaption>Day6</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/CNBLUE.jpg" alt="CNBLUE">
+   <img class="kpop" src="../자료/K-PopGroups/CNBLUE.jpg" alt="CNBLUE">
    <figcaption>CNBLUE</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/FTIsland.jpg" alt="FTIsland">
+   <img class="kpop" src="../자료/K-PopGroups/FTIsland.jpg" alt="FTIsland">
    <figcaption>F.T.Island</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/EXID.jpg" alt="EXID">
+   <img class="kpop" src="../자료/K-PopGroups/EXID.jpg" alt="EXID">
    <figcaption>EXID</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/GFriend.jpg" alt="GFriend">
+   <img class="kpop" src="../자료/K-PopGroups/GFriend.jpg" alt="GFriend">
    <figcaption>GFriend</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/CLC.jpg" alt="CLC">
+   <img class="kpop" src="../자료/K-PopGroups/CLC.jpg" alt="CLC">
    <figcaption>CLC</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Seventeen.jpg" alt="Seventeen">
+   <img class="kpop" src="../자료/K-PopGroups/Seventeen.jpg" alt="Seventeen">
    <figcaption>Seventeen</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/ITZY.jpg" alt="ITZY">
+   <img class="kpop" src="../자료/K-PopGroups/ITZY.jpg" alt="ITZY">
    <figcaption>ITZY</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/RedVelvet.jpg" alt="RedVelvet">
+   <img class="kpop" src="../자료/K-PopGroups/RedVelvet.jpg" alt="RedVelvet">
    <figcaption>RedVelvet</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/IKon.jpg" alt="IKon">
+   <img class="kpop" src="../자료/K-PopGroups/IKon.jpg" alt="IKon">
    <figcaption>IKon</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/SuperJunior.jpg" alt="SuperJunior">
+   <img class="kpop" src="../자료/K-PopGroups/SuperJunior.jpg" alt="SuperJunior">
    <figcaption>Super Junior</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/AOA.jpg" alt="AOA">
+   <img class="kpop" src="../자료/K-PopGroups/AOA.jpg" alt="AOA">
    <figcaption>AOA</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/2PM.jpg" alt="2PM">
+   <img class="kpop" src="../자료/K-PopGroups/2PM.jpg" alt="2PM">
    <figcaption>2PM</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/SHINee.jpg" alt="SHINee">
+   <img class="kpop" src="../자료/K-PopGroups/SHINee.jpg" alt="SHINee">
    <figcaption>SHINee</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/BlockB.jpg" alt="BlockB">
+   <img class="kpop" src="../자료/K-PopGroups/BlockB.jpg" alt="BlockB">
    <figcaption>BlockB</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/2NE1.jpg" alt="2NE1">
+   <img class="kpop" src="../자료/K-PopGroups/2NE1.jpg" alt="2NE1">
    <figcaption>2NE1</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/MONSTAX.png" alt="MONSTAX">
+   <img class="kpop" src="../자료/K-PopGroups/MONSTAX.png" alt="MONSTAX">
    <figcaption>MONSTA X</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/IZONE.jpg" alt="IZONE">
+   <img class="kpop" src="../자료/K-PopGroups/IZONE.jpg" alt="IZONE">
    <figcaption>IZONE</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/GIDLE.jpg" alt="GIDLE">
+   <img class="kpop" src="../자료/K-PopGroups/GIDLE.jpg" alt="GIDLE">
    <figcaption>(G)-IDLE</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/NCT127.jpg" alt="NCT127">
+   <img class="kpop" src="../자료/K-PopGroups/NCT127.jpg" alt="NCT127">
    <figcaption>NCT127</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/NUEST.png" alt="NUEST">
+   <img class="kpop" src="../자료/K-PopGroups/NUEST.png" alt="NUEST">
    <figcaption>NU'EST</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Blackswan.jpg" alt="Blackswan">
+   <img class="kpop" src="../자료/K-PopGroups/Blackswan.jpg" alt="Blackswan">
    <figcaption>Blackswan</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/TWICE.jpg" alt="TWICE">
+   <img class="kpop" src="../자료/K-PopGroups/TWICE.jpg" alt="TWICE">
    <figcaption>TWICE</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/fx.jpg" alt="fx">
+   <img class="kpop" src="../자료/K-PopGroups/fx.jpg" alt="fx">
    <figcaption>f(x)</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Mamamoo.jpg" alt="Mamamoo">
+   <img class="kpop" src="../자료/K-PopGroups/Mamamoo.jpg" alt="Mamamoo">
    <figcaption>Mamamoo</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/B1A4.jpg" alt="B1A4">
+   <img class="kpop" src="../자료/K-PopGroups/B1A4.jpg" alt="B1A4">
    <figcaption>B1A4</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Everglow.jpg" alt="Everglow">
+   <img class="kpop" src="../자료/K-PopGroups/Everglow.jpg" alt="Everglow">
    <figcaption>Everglow</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/ATEEZ.jpg" alt="ATEEZ">
+   <img class="kpop" src="../자료/K-PopGroups/ATEEZ.jpg" alt="ATEEZ">
    <figcaption>ATEEZ</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/CIX.jpg" alt="CIX">
+   <img class="kpop" src="../자료/K-PopGroups/CIX.jpg" alt="CIX">
    <figcaption>CIX</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/NCT.jpg" alt="NCT">
+   <img class="kpop" src="../자료/K-PopGroups/NCT.jpg" alt="NCT">
    <figcaption>NCT</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/GirlsDay.jpg" alt="GirlsDay">
+   <img class="kpop" src="../자료/K-PopGroups/GirlsDay.jpg" alt="GirlsDay">
    <figcaption>Girls Day</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/CosmicGirls.jpg" alt="CosmicGirls">
+   <img class="kpop" src="../자료/K-PopGroups/CosmicGirls.jpg" alt="CosmicGirls">
    <figcaption>Cosmic Girls</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/DalShabet.jpg" alt="DalShabet">
+   <img class="kpop" src="../자료/K-PopGroups/DalShabet.jpg" alt="DalShabet">
    <figcaption>Dal Shabet</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/DreamCatcher.jpg" alt="DreamCatcher">
+   <img class="kpop" src="../자료/K-PopGroups/DreamCatcher.jpg" alt="DreamCatcher">
    <figcaption>Dream Catcher</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/AfterSchool.jpg" alt="AfterSchool">
+   <img class="kpop" src="../자료/K-PopGroups/AfterSchool.jpg" alt="AfterSchool">
    <figcaption>After School</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/2AM.jpg" alt="2AM">
+   <img class="kpop" src="../자료/K-PopGroups/2AM.jpg" alt="2AM">
    <figcaption>2AM</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Astro.jpg" alt="Astro">
+   <img class="kpop" src="../자료/K-PopGroups/Astro.jpg" alt="Astro">
    <figcaption>Astro</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/StrayKids.jpg" alt="StrayKids">
+   <img class="kpop" src="../자료/K-PopGroups/StrayKids.jpg" alt="StrayKids">
    <figcaption>Stray Kids</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/BrownEyedGirls.png" alt="BrownEyedGirls">
+   <img class="kpop" src="../자료/K-PopGroups/BrownEyedGirls.png" alt="BrownEyedGirls">
    <figcaption>Brown Eyed Girls</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/4Minute.jpg" alt="4Minute">
+   <img class="kpop" src="../자료/K-PopGroups/4Minute.jpg" alt="4Minute">
    <figcaption>4Minute</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/Cravity.png" alt="Cravity">
+   <img class="kpop" src="../자료/K-PopGroups/Cravity.png" alt="Cravity">
    <figcaption>Cravity</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/TheBoyz.jpg" alt="TheBoyz">
+   <img class="kpop" src="../자료/K-PopGroups/TheBoyz.jpg" alt="TheBoyz">
    <figcaption>The Boyz</figcaption>
   </a>
  </figure></th></tr>
 
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-PopGroups/VIXX.jpg" alt="VIXX">
+   <img class="kpop" src="../자료/K-PopGroups/VIXX.jpg" alt="VIXX">
    <figcaption>VIXX</figcaption>
   </a>
  </figure></th></tr>
