--- a/KpopSingers.html
+++ b/KpopSingers.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kpop.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>KpopSingers</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -20,5 +22,262 @@
  </div>
 </div>
 <h1>K-Pop Singers</h1>
+<table>
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/PSY.jpg" alt="PSY">
+   <figcaption>PSY</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Ailee.jpg" alt="Ailee">
+   <figcaption>Ailee</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/BoA.jpg" alt="BoA">
+   <figcaption>BoA</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/GDragon.jpg" alt="GDragon">
+   <figcaption>G-Dragon</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/LeeTaeMin.jpg" alt="LeeTaeMin">
+   <figcaption>Lee Tae-min</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/IU.jpg" alt="IU">
+   <figcaption>IU</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Junsu.jpg" alt="Junsu">
+   <figcaption>Junsu</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/CL.jpg" alt="CL">
+   <figcaption>CL</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/KangDaniel.jpg" alt="KangDaniel">
+   <figcaption>Kang Daniel</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/EricNam.jpg" alt="EricNam">
+   <figcaption>Eric Nam</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Chungha.jpg" alt="Chungha">
+   <figcaption>Chungha</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/BaeSuzy.jpg" alt="BaeSuzy">
+   <figcaption>Bae Suzy</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/JayPark.jpg" alt="JayPark">
+   <figcaption>Jay Park</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Taeyang.jpg" alt="Taeyang">
+   <figcaption>Taeyang</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Baekhyun.jpg" alt="Baekhyun">
+   <figcaption>Baekhyun</figcaption>
+  </a>
+ </figure></th></tr>
+
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Zico.jpg" alt="Zico">
+   <figcaption>Zico</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/JoKwon.jpg" alt="JoKwon">
+   <figcaption>Jo Kwon</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Sunmi.jpg" alt="Sunmi">
+   <figcaption>Sunmi</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/HaSungWoon.jpg" alt="HaSungWoon">
+   <figcaption>Ha Sung-woon</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Chen.jpg" alt="Chen">
+   <figcaption>Chen</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/JangHyunSeung.jpg" alt="JangHyunSeung">
+   <figcaption>Jang Hyun-seung</figcaption>
+  </a>
+ </figure></th></tr>
+
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Onew.jpg" alt="Onew">
+   <figcaption>Onew</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Suga.jpg" alt="Suga">
+   <figcaption>Suga</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/JungEunJi.jpg" alt="JungEunJi">
+   <figcaption>Jung Eun-ji</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/HwangChiYeul.jpg" alt="HwangChiYeul">
+   <figcaption>Hwang Chi-yeul</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Yesung.jpg" alt="Yesung">
+   <figcaption>Yesung</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Jennie.jpg" alt="Jennie">
+   <figcaption>Jennie</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/DO.jpg" alt="DO">
+   <figcaption>D.O.</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/KimJongKook.jpg" alt="KimJongKook">
+   <figcaption>Kim Jong-kook</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/LeeSeungGi.jpg" alt="LeeSeungGi">
+   <figcaption>Lee Seung-gi</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Taeyeon.jpg" alt="Taeyeon">
+   <figcaption>Taeyeon</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Hyuna.jpeg" alt="Hyuna">
+   <figcaption>Hyuna</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/ParkJiHoon.jpeg" alt="ParkJiHoon">
+   <figcaption>Park Ji-hoon</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/KWill.jpg" alt="KWill">
+   <figcaption>K.Will</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/ImYoonAh.jpg" alt="ImYoonAh">
+   <figcaption>Im Yoon-ah</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/KimJaeJoong.jpg" alt="KimJaeJoong">
+   <figcaption>Kim Jae-joong</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/SongMinHo.jpg" alt="SongMinHo">
+   <figcaption>Song Min-ho</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Jungkook.jpg" alt="Jungkook">
+   <figcaption>Jungkook</figcaption>
+  </a>
+ </figure></th>
+ <th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Jin.jpg" alt="Jin">
+   <figcaption>Jin</figcaption>
+  </a>
+ </figure></th></tr>
+
+ <tr><th><figure>
+  <a href="#">
+   <img class="kpop" src="../자료/K-PopSingers/Hyolyn.jpg" alt="Hyolyn">
+   <figcaption>Hyolyn</figcaption>
+  </a>
+ </figure></th></tr>
+</table>
 </body>
 </html>
