--- a/Contact.html
+++ b/Contact.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/contact.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>Contact</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -22,20 +24,20 @@
 <table>
  <tr><th><figure>
   <a href="https://www.facebook.com/profile.php?id=100014325998663">
-   <img src="자료/Contact/FacebookLogo.png" alt="FacebookLogo">
+   <img class="contact" src="../자료/Contact/FacebookLogo.png" alt="FacebookLogo">
    <figcaption>ID:Altanzul</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="https://www.instagram.com/jlml_h/">
-   <img src="자료/Contact/InstagramLogo.png" alt="InstagramLogo">
+   <img class="contact" src="../자료/Contact/InstagramLogo.png" alt="InstagramLogo">
    <figcaption>ID:jlml_h</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="https://mail.google.com/">
-   <img src="자료/contact/GmailLogo.png" alt="GmailLogo" class="gmail">
-   <figcaption>Gmail Address:khanahrim@gmail.com</figcaption>
+   <img class="contactg" src="../자료/contact/GmailLogo.png" alt="GmailLogo">
+   <figcaption>Address:khanahrim@gmail.com</figcaption>
   </a>
  </figure></th></tr>
 </table>
