--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/style">
-  <title>KdramaSelectYear</title>
+  <title>Home</title>
  </head>
 <body>
 <div class="topnav">
@@ -14,6 +14,7 @@
  <a href="/about">About</a>
  <a href="/contact">Contact</a>
  <a href="/logout">Logout</a>
+
 <div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
@@ -21,8 +22,5 @@
   </form>
  </div>
 </div>
-<h1><a href="/kdrama2018">K-Drama 2018 </a></h1>
-<h1><a href="/kdrama2019">K-Drama 2019 </a></h1>
-<h1><a href="/kdrama2020">K-Drama 2020 </a></h1>
 </body>
 </html>
