--- a/Kdrama2019.html
+++ b/Kdrama2019.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kdrama.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>Kdrama2019</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
@@ -23,273 +25,273 @@
 <table>
  <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/HotelDelLuna.jpg" alt="HotelDelLuna">
+   <img class="kdrama" src="../자료/K-Drama2019/HotelDelLuna.jpg" alt="HotelDelLuna">
    <figcaption>Hotel Del Luna</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/LoveAlarm.jpg" alt="LoveAlarm">
+   <img class="kdrama" src="../자료/K-Drama2019/LoveAlarm.jpg" alt="LoveAlarm">
    <figcaption>Love Alarm</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheLightInYourEyes.jpg" alt="TheLightInYourEyes">
+   <img class="kdrama" src="../자료/K-Drama2019/TheLightInYourEyes.jpg" alt="TheLightInYourEyes">
    <figcaption>The Light In Your Eyes</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/ArthdalChronicles.jpg" alt="ArthdalChronicles">
+   <img class="kdrama" src="../자료/K-Drama2019/ArthdalChronicles.jpg" alt="ArthdalChronicles">
    <figcaption>ArthdalChronicles</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/WhenTheCamelliaBlooms.jpg" alt="WhenTheCamelliaBlooms">
+   <img class="kdrama" src="../자료/K-Drama2019/WhenTheCamelliaBlooms.jpg" alt="WhenTheCamelliaBlooms">
    <figcaption>WhenTheCamelliaBlooms</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Vagabond.jpg" alt="Vagabond">
+   <img class="kdrama" src="../자료/K-Drama2019/Vagabond.jpg" alt="Vagabond">
    <figcaption>Vagabond</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/RomanceIsABonusBook.jpg" alt="RomanceIsABonusBook">
+   <img class="kdrama" src="../자료/K-Drama2019/RomanceIsABonusBook.jpg" alt="RomanceIsABonusBook">
    <figcaption>Romance Is A Bonus Book</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TouchYourHeart.jpg" alt="TouchYourHeart">
+   <img class="kdrama" src="../자료/K-Drama2019/TouchYourHeart.jpg" alt="TouchYourHeart">
    <figcaption>Touch Your Heart</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheCrownedClown.jpg" alt="TheCrownedClown">
+   <img class="kdrama" src="../자료/K-Drama2019/TheCrownedClown.jpg" alt="TheCrownedClown">
    <figcaption>The Crowned Clown</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheFieryPriest.jpg" alt="TheFieryPriest">
+   <img class="kdrama" src="../자료/K-Drama2019/TheFieryPriest.jpg" alt="TheFieryPriest">
    <figcaption>TheFieryPriest</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/AngelLastMissionLove.jpg" alt="AngelLastMissionLove">
+   <img class="kdrama" src="../자료/K-Drama2019/AngelLastMissionLove.jpg" alt="AngelLastMissionLove">
    <figcaption>Angel Last Mission Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MemoriesOfTheAlhambra.jpg" alt="MemoriesOfTheAlhambra">
+   <img class="kdrama" src="../자료/K-Drama2019/MemoriesOfTheAlhambra.jpg" alt="MemoriesOfTheAlhambra">
    <figcaption>Memories Of The Alhambra</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/DesignatedSurvivor60Days.jpg" alt="DesignatedSurvivor60Days">
+   <img class="kdrama" src="../자료/K-Drama2019/DesignatedSurvivor60Days.jpg" alt="DesignatedSurvivor60Days">
    <figcaption>Designated Survivor 60 Days</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/HerPrivateLife.jpg" alt="HerPrivateLife">
+   <img class="kdrama" src="../자료/K-Drama2019/HerPrivateLife.jpg" alt="HerPrivateLife">
    <figcaption>Her Private Life</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Abyss.jpg" alt="Abyss">
+   <img class="kdrama" src="../자료/K-Drama2019/Abyss.jpg" alt="Abyss">
    <figcaption>Abyss</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/SKYCastle.jpg" alt="SKYCastle">
+   <img class="kdrama" src="../자료/K-Drama2019/SKYCastle.jpg" alt="SKYCastle">
    <figcaption>SKY Castle</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/DoctorPrisoner.jpg" alt="DoctorPrisoner">
+   <img class="kdrama" src="../자료/K-Drama2019/DoctorPrisoner.jpg" alt="DoctorPrisoner">
    <figcaption>DoctorPrisoner</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/HeIsPsychometric.jpg" alt="HeIsPsychometric">
+   <img class="kdrama" src="../자료/K-Drama2019/HeIsPsychometric.jpg" alt="HeIsPsychometric">
    <figcaption>He Is Psychometric</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/DoctorJohn.jpg" alt="DoctorJohn">
+   <img class="kdrama" src="../자료/K-Drama2019/DoctorJohn.jpg" alt="DoctorJohn">
    <figcaption>Doctor John</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/OneSpringNight.png" alt="OneSpringNight">
+   <img class="kdrama" src="../자료/K-Drama2019/OneSpringNight.png" alt="OneSpringNight">
    <figcaption>One Spring Night</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/RookieHistorianGooHaeRyung.png" alt="RookieHistorianGooHaeRyung">
+   <img class="kdrama" src="../자료/K-Drama2019/RookieHistorianGooHaeRyung.png" alt="RookieHistorianGooHaeRyung">
    <figcaption>Rookie Historian Goo Hae Ryung</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/ExtraordinaryYou.jpg" alt="ExtraordinaryYou">
+   <img class="kdrama" src="../자료/K-Drama2019/ExtraordinaryYou.jpg" alt="ExtraordinaryYou">
    <figcaption>Extraordinary You</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/SearchWWW.jpg" alt="SearchWWW">
+   <img class="kdrama" src="../자료/K-Drama2019/SearchWWW.jpg" alt="SearchWWW">
    <figcaption>SearchWWW</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MyAbsoluteBoyfriend.jpg" alt="MyAbsoluteBoyfriend">
+   <img class="kdrama" src="../자료/K-Drama2019/MyAbsoluteBoyfriend.jpg" alt="MyAbsoluteBoyfriend">
    <figcaption>My Absolute Boyfriend</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/ChiefOfStaff.jpg" alt="ChiefOfStaff">
+   <img class="kdrama" src="../자료/K-Drama2019/ChiefOfStaff.jpg" alt="ChiefOfStaff">
    <figcaption>ChiefOfStaff</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/VIP.jpg" alt="VIP">
+   <img class="kdrama" src="../자료/K-Drama2019/VIP.jpg" alt="VIP">
    <figcaption>VIP</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheSecretLifeOfMySecretary.jpg" alt="TheSecretLifeOfMySecretary">
+   <img class="kdrama" src="../자료/K-Drama2019/TheSecretLifeOfMySecretary.jpg" alt="TheSecretLifeOfMySecretary">
    <figcaption>The Secret Life Of My Secretary</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MeloIsMyNature.jpg" alt="MeloIsMyNature">
+   <img class="kdrama" src="../자료/K-Drama2019/MeloIsMyNature.jpg" alt="MeloIsMyNature">
    <figcaption>Melo Is My Nature</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MeltingMeSoftly.jpg" alt="MeltingMeSoftly">
+   <img class="kdrama" src="../자료/K-Drama2019/MeltingMeSoftly.jpg" alt="MeltingMeSoftly">
    <figcaption>Melting Me Softly</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Haechi.png" alt="Haechi">
+   <img class="kdrama" src="../자료/K-Drama2019/Haechi.png" alt="Haechi">
    <figcaption>Haechi</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MyCountryTheNewAge.jpg" alt="MyCountryTheNewAge">
+   <img class="kdrama" src="../자료/K-Drama2019/MyCountryTheNewAge.jpg" alt="MyCountryTheNewAge">
    <figcaption>My Country The New Age</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheTaleOfNokdu.jpg" alt="TheTaleOfNokdu">
+   <img class="kdrama" src="../자료/K-Drama2019/TheTaleOfNokdu.jpg" alt="TheTaleOfNokdu">
    <figcaption>The Tale Of Nokdu</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheGreatShow.jpg" alt="TheGreatShow">
+   <img class="kdrama" src="../자료/K-Drama2019/TheGreatShow.jpg" alt="TheGreatShow">
    <figcaption>The Great Show</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/QueenLoveAndWar.jpg" alt="QueenLoveAndWar">
+   <img class="kdrama" src="../자료/K-Drama2019/QueenLoveAndWar.jpg" alt="QueenLoveAndWar">
    <figcaption>Queen Love And War</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/HellIsOtherPeople.jpg" alt="HellIsOtherPeople">
+   <img class="kdrama" src="../자료/K-Drama2019/HellIsOtherPeople.jpg" alt="HellIsOtherPeople">
    <figcaption>Hell Is Other People</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Encounter.jpg" alt="Encounter">
+   <img class="kdrama" src="../자료/K-Drama2019/Encounter.jpg" alt="Encounter">
    <figcaption>Encounter</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/TheLastEmpress.jpg" alt="TheLastEmpress">
+   <img class="kdrama" src="../자료/K-Drama2019/TheLastEmpress.jpg" alt="TheLastEmpress">
    <figcaption>The Last Empress</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Welcome2Life.jpg" alt="Welcome2Life">
+   <img class="kdrama" src="../자료/K-Drama2019/Welcome2Life.jpg" alt="Welcome2Life">
    <figcaption>Welcome 2 Life</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/WhenTheDevilCallsYourName.jpg" alt="WhenTheDevilCallsYourName">
+   <img class="kdrama" src="../자료/K-Drama2019/WhenTheDevilCallsYourName.jpg" alt="WhenTheDevilCallsYourName">
    <figcaption>When The Devil Calls Your Name</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/CleanWithPassionForNow.jpg" alt="CleanWithPassionForNow">
+   <img class="kdrama" src="../자료/K-Drama2019/CleanWithPassionForNow.jpg" alt="CleanWithPassionForNow">
    <figcaption>Clean With Passion For Now</figcaption>
   </a>
  </figure></th></tr>
 
 <tr><th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/DiaryOfAProsecutor.jpg" alt="DiaryOfAProsecutor">
+   <img class="kdrama" src="../자료/K-Drama2019/DiaryOfAProsecutor.jpg" alt="DiaryOfAProsecutor">
    <figcaption>Diary Of A Prosecutor</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MyFirstFirstLove.jpg" alt="MyFirstFirstLove">
+   <img class="kdrama" src="../자료/K-Drama2019/MyFirstFirstLove.jpg" alt="MyFirstFirstLove">
    <figcaption>My First First Love</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/Possessed.jpg" alt="Possessed">
+   <img class="kdrama" src="../자료/K-Drama2019/Possessed.jpg" alt="Possessed">
    <figcaption>Possessed</figcaption>
   </a>
  </figure></th>
  <th><figure>
   <a href="#">
-   <img src="자료/K-Drama2019/MyFellowCitizens.jpg" alt="MyFellowCitizens">
+   <img class="kdrama" src="../자료/K-Drama2019/MyFellowCitizens.jpg" alt="MyFellowCitizens">
    <figcaption>My Fellow Citizens</figcaption>
   </a>
  </figure></th>
