--- a/KoreanProverb.html
+++ b/KoreanProverb.html
@@ -1,18 +1,20 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/topik.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>KoreanProverb</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
