--- a/KpopSelect.html
+++ b/KpopSelect.html
@@ -1,26 +1,27 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/kpop.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>KpopSelect</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
   </form>
  </div>
 </div>
-<h1><a href="KpopGroups.html">K-Pop Groups</a></h1>
-<h1><a href="KpopSingers.html">K-Pop Singers</a></h1>
-<h1><a href="Mama.html">MAMA</a></h1>
+<h1><a href="/kpopgroups">K-Pop Groups</a></h1>
+<h1><a href="/kpopsingers">K-Pop Singers</a></h1>
 </body>
 </html>
