--- a/Topik2017.html
+++ b/Topik2017.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/style">
-  <title>KdramaSelectYear</title>
+  <title>Topik2017</title>
  </head>
 <body>
 <div class="topnav">
@@ -21,8 +21,10 @@
   </form>
  </div>
 </div>
-<h1><a href="/kdrama2018">K-Drama 2018 </a></h1>
-<h1><a href="/kdrama2019">K-Drama 2019 </a></h1>
-<h1><a href="/kdrama2020">K-Drama 2020 </a></h1>
-</body>
-</html>
+<button onclick="myVar=setTimeout(Topik2017,3000)">Start</button>
+<embed
+src="../자료/TopikRead/2017/52thReading.pdf#toolbar=0&navpanes=0&scrollbar=0"
+    type="application/pdf"
+    height="500px"
+    width="100%"
+></embed>
