--- a/TopikSelect.html
+++ b/TopikSelect.html
@@ -1,27 +1,29 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style/topik.css">
+  <link rel="stylesheet" type="text/css" href="/style">
   <title>TopikSelect</title>
  </head>
 <body>
 <div class="topnav">
- <a class="active" href="#home">KoreanWave</a>
- <a href="KdramaSelectYear.html">K-Drama</a>
- <a href="KpopSelect.html">K-Pop</a>
- <a href="TopikSelect.html">Topik</a>
- <a href="About.html">About</a>
- <a href="Contact.html">Contact</a>
- <div class="search-container">
+ <a class="active" href="/home">KoreanWave</a>
+ <a href="/kdramaselectyear">K-Drama</a>
+ <a href="/kpopselect">K-Pop</a>
+ <a href="/topikselect">Topik</a>
+ <a href="/about">About</a>
+ <a href="/contact">Contact</a>
+ <a href="/logout">Logout</a>
+<div class="search-container">
   <form action="#">
    <input type="text" placeholder="Search.." name="search">
     <button type="submit"><i class="#"></i></button>
   </form>
  </div>
 </div>
-<h1><a href="KoreanProverb.html">Korean Proverb</a></h1>
-<h1><a href="Topik2017.html">Topik 2017</a></h1>
-<h1><a href="Topik2018.html">Topik 2018</a></h1>
-<h1><a href="Topik2019.html">Topik2019</a></h1>
+<h1><a href="/koreanproverb">Korean Proverb</a></h1>
+<h1><a href="/topik2017">Topik 2017</a></h1>
+<h1><a href="/topik2018">Topik 2018</a></h1>
+<h1><a href="/topik2019">Topik 2019</a></h1>
 </body>
 </html>
